tests/ui/const-generics/bad-generic-in-copy-impl.stderr
error: the constant `1` is not of type `usize`
  --> $DIR/bad-generic-in-copy-impl.rs:3:8
   |
LL |     x: [u8; SIZE],
   |        ^^^^^^^^^^ expected `usize`, found `u32`

error: aborting due to previous error

